crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badNormalMapReader.usda
version https://git-lfs.github.com/spec/v1
oid sha256:b5fbd79fabe4e8abcffb2e9047cf8337eeefc04807f9f927ad0c6fe8cf57f675
size 4388
